# Django-Web-app

./: README.md
WellenceChallenge/: .pre-commit-config.yaml  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  openapi.yaml  pyproject.toml
WellenceChallenge/.github/workflows/: deploy.yml
WellenceChallenge/WellenceApp/: api.py  apps.py  forms.py  models.py  schemas.py  services.py  views.py
WellenceChallenge/WellenceApp/migrations/: 0001_initial.py  0002_rename_useremail_tasks_email.py  0003_alter_tasks_email.py  0004_rename_email_tasks_email.py  0005_alter_tasks_id.py  0006_alter_tasks_id.py  0007_alter_tasks_task.py  0008_alter_tasks_task.py  0009_update_tasks_model.py  0010_import_seed_data.py
WellenceChallenge/WellenceChallenge/: asgi.py  settings.py  urls.py  wsgi.py
WellenceChallenge/docs/source/: api.rst  conf.py  index.rst
WellenceChallenge/seed_data/: tasks_seed.csv
WellenceChallenge/static/css/: Dashboard.css  style.css
WellenceChallenge/static/script/: Dashboard.js  DataEntry.js  script.js
WellenceChallenge/staticfiles/css/: DataEntry.css  password_verify_link.css
WellenceChallenge/templates/: DashBoard.html  DataEntry.html  index.html  password_verify_link.html
